--- a/style.css
+++ b/style.css
@@ -7,17 +7,17 @@
 }
 
 body {
-  background-color: rgb(194, 109, 123);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   height: 100vh;
+  background-color: rgb(194, 109, 123);
 }
 
 .container {
-  height: 800px;
-  width: 800px;
+  width: 700px;
+  height: 600px;
   text-align: center;
   border: 2px solid #fff;
   border-radius: 4px;
@@ -29,4 +29,26 @@ body {
   font-family: "Dancing Script", sans-serif;
   font-size: 3rem;
   font-weight: 100;
+  margin-bottom: 2rem;
+}
+
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cat-container {
+  margin-right: 2rem;
+}
+
+.img-cat,
+.img-dog {
+  margin-bottom: 2rem;
+}
+
+img {
+  height: 400px;
+  width: 300px;
+  border-radius: 2px;
 }
